removes box shadow

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -225,7 +225,7 @@ img.header-image,
 img.wp-post-image {
 	/* Add fancy borders to all WordPress-added images but not things like badges and icons and the like */
 	border-radius: 3px;
-	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+	//box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
 .wp-caption {
 	max-width: 100%; /* Keep wide captions from overflowing their container. */
@@ -1270,7 +1270,18 @@ a.comment-edit-link:hover {
 	text-align: right;
 }
 
+#hugeit-contact-wrapper_8{
+	background: transparent!important;
+	max-width:600px;
+	margin: 0 auto;
+	h3{
+		display:none!important;
+	}
+}
 
 
-
+div#hugeit-contact-wrapper_8 .buttons-block button.submit {
+	    background-color: #622e54 !important;
+    border: 1px solid #622e54 !important;
+}
 
