--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@ img {
 
 .main-navigation a:hover,
 .main-navigation a:focus {
-  color: #622E54; }
+  color: #21759b; }
 
 .main-navigation ul.nav-menu,
 .main-navigation div.nav-menu > ul {
@@ -382,18 +382,15 @@ img {
   @media only screen and (min-width: 700px) {
     .main-navigation ul.nav-menu,
     .main-navigation div.nav-menu > ul {
-      display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
       background: #f8f8f6;
       min-height: 57px;
       line-height: 57px;
-      -webkit-justify-content: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      -webkit-flex-wrap: wrap;
-          -ms-flex-wrap: wrap;
-              flex-wrap: wrap; } }
+      -ms-flex-pack: center;
+          justify-content: center;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap; } }
   .main-navigation ul.nav-menu li,
   .main-navigation div.nav-menu > ul li {
     padding: 0 17px;
@@ -419,169 +416,6 @@ textarea, input {
 :focus {
   outline-color: transparent;
   outline-style: none; }
-
-/* =Comments
--------------------------------------------------------------- */
-.comments-title {
-  margin-bottom: 48px;
-  margin-bottom: 3.428571429rem;
-  font-size: 16px;
-  font-size: 1.142857143rem;
-  line-height: 1.5;
-  font-weight: normal; }
-
-.comments-area article {
-  margin: 24px 0;
-  margin: 1.714285714rem 0; }
-
-.comments-area article header {
-  margin: 0 0 48px;
-  margin: 0 0 3.428571429rem;
-  overflow: hidden;
-  position: relative; }
-
-.comments-area article header img {
-  float: left;
-  padding: 0;
-  line-height: 0; }
-
-.comments-area article header cite,
-.comments-area article header time {
-  display: block;
-  margin-left: 85px;
-  margin-left: 6.071428571rem; }
-
-.comments-area article header cite {
-  font-style: normal;
-  font-size: 15px;
-  font-size: 1.071428571rem;
-  line-height: 1.42857143; }
-
-.comments-area cite b {
-  font-weight: normal; }
-
-.comments-area article header time {
-  line-height: 1.714285714;
-  text-decoration: none;
-  font-size: 12px;
-  font-size: 0.857142857rem;
-  color: #5e5e5e; }
-
-.comments-area article header a {
-  text-decoration: none;
-  color: #5e5e5e; }
-
-.comments-area article header a:hover {
-  color: #21759b; }
-
-.comments-area article header cite a {
-  color: #444; }
-
-.comments-area article header cite a:hover {
-  text-decoration: underline; }
-
-.comments-area article header h4 {
-  position: absolute;
-  top: 0;
-  right: 0;
-  padding: 6px 12px;
-  padding: 0.428571429rem 0.857142857rem;
-  font-size: 12px;
-  font-size: 0.857142857rem;
-  font-weight: normal;
-  color: #fff;
-  background-color: #0088d0;
-  background-repeat: repeat-x;
-  border-radius: 3px;
-  border: 1px solid #007cbd; }
-
-.comments-area .bypostauthor cite span {
-  position: absolute;
-  margin-left: 5px;
-  margin-left: 0.357142857rem;
-  padding: 2px 5px;
-  padding: 0.142857143rem 0.357142857rem;
-  font-size: 10px;
-  font-size: 0.714285714rem; }
-
-.comments-area .bypostauthor cite b {
-  font-weight: bold; }
-
-a.comment-reply-link,
-a.comment-edit-link {
-  color: #686868;
-  font-size: 13px;
-  font-size: 0.928571429rem;
-  line-height: 1.846153846; }
-
-a.comment-reply-link:hover,
-a.comment-edit-link:hover {
-  color: #21759b; }
-
-.commentlist .pingback {
-  line-height: 1.714285714;
-  margin-bottom: 24px;
-  margin-bottom: 1.714285714rem; }
-
-/* Comment form */
-#respond {
-  margin-top: 48px;
-  margin-top: 3.428571429rem; }
-
-#respond h3#reply-title {
-  font-size: 16px;
-  font-size: 1.142857143rem;
-  line-height: 1.5; }
-
-#respond h3#reply-title #cancel-comment-reply-link {
-  margin-left: 10px;
-  margin-left: 0.714285714rem;
-  font-weight: normal;
-  font-size: 12px;
-  font-size: 0.857142857rem; }
-
-#respond form {
-  margin: 24px 0;
-  margin: 1.714285714rem 0; }
-
-#respond form p {
-  margin: 11px 0;
-  margin: 0.785714286rem 0; }
-
-#respond form p.logged-in-as {
-  margin-bottom: 24px;
-  margin-bottom: 1.714285714rem; }
-
-#respond form label {
-  display: block;
-  line-height: 1.714285714; }
-
-#respond form input[type="text"],
-#respond form textarea {
-  box-sizing: border-box;
-  font-size: 12px;
-  font-size: 0.857142857rem;
-  line-height: 1.714285714;
-  padding: 10px;
-  padding: 0.714285714rem;
-  width: 100%; }
-
-#respond form p.form-allowed-tags {
-  margin: 0;
-  font-size: 12px;
-  font-size: 0.857142857rem;
-  line-height: 2;
-  color: #5e5e5e; }
-
-.required {
-  color: red; }
-
-.flex-content article {
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex; }
-  .flex-content article div {
-    width: 50%; }
 
 /* =Repeatable patterns
 -------------------------------------------------------------- */
@@ -869,10 +703,10 @@ body {
 
 a {
   outline: none;
-  color: #C29CC3; }
+  color: #21759b; }
 
 a:hover {
-  color: #622E54; }
+  color: #0f3647; }
 
 .wrapper {
   padding: 0 20px;
@@ -965,7 +799,6 @@ section[role="banner"] {
 /* Sidebar */
 .widget-area .widget {
   -webkit-hyphens: auto;
-  -moz-hyphens: auto;
   -ms-hyphens: auto;
       hyphens: auto;
   margin-bottom: 48px;
@@ -1048,8 +881,7 @@ footer[role="contentinfo"] a:hover {
   font-size: 20px;
   font-size: 1.428571429rem;
   line-height: 1.2;
-  font-weight: normal;
-  text-align: center; }
+  font-weight: normal; }
 
 .entry-header .entry-title a {
   text-decoration: none; }
@@ -1311,13 +1143,13 @@ img.aligncenter,
   padding: 6px 10px 6px 0; }
 
 .site-content article {
+  border-bottom: 4px double #ededed;
   margin-bottom: 72px;
   margin-bottom: 5.142857143rem;
   padding-bottom: 24px;
   padding-bottom: 1.714285714rem;
   word-wrap: break-word;
   -webkit-hyphens: auto;
-  -moz-hyphens: auto;
   -ms-hyphens: auto;
       hyphens: auto; }
 
@@ -1508,6 +1340,162 @@ article.format-quote .entry-content blockquote {
   margin-right: 21px;
   margin-right: 1.5rem; }
 
+/* =Comments
+-------------------------------------------------------------- */
+.comments-title {
+  margin-bottom: 48px;
+  margin-bottom: 3.428571429rem;
+  font-size: 16px;
+  font-size: 1.142857143rem;
+  line-height: 1.5;
+  font-weight: normal; }
+
+.comments-area article {
+  margin: 24px 0;
+  margin: 1.714285714rem 0; }
+
+.comments-area article header {
+  margin: 0 0 48px;
+  margin: 0 0 3.428571429rem;
+  overflow: hidden;
+  position: relative; }
+
+.comments-area article header img {
+  float: left;
+  padding: 0;
+  line-height: 0; }
+
+.comments-area article header cite,
+.comments-area article header time {
+  display: block;
+  margin-left: 85px;
+  margin-left: 6.071428571rem; }
+
+.comments-area article header cite {
+  font-style: normal;
+  font-size: 15px;
+  font-size: 1.071428571rem;
+  line-height: 1.42857143; }
+
+.comments-area cite b {
+  font-weight: normal; }
+
+.comments-area article header time {
+  line-height: 1.714285714;
+  text-decoration: none;
+  font-size: 12px;
+  font-size: 0.857142857rem;
+  color: #5e5e5e; }
+
+.comments-area article header a {
+  text-decoration: none;
+  color: #5e5e5e; }
+
+.comments-area article header a:hover {
+  color: #21759b; }
+
+.comments-area article header cite a {
+  color: #444; }
+
+.comments-area article header cite a:hover {
+  text-decoration: underline; }
+
+.comments-area article header h4 {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 6px 12px;
+  padding: 0.428571429rem 0.857142857rem;
+  font-size: 12px;
+  font-size: 0.857142857rem;
+  font-weight: normal;
+  color: #fff;
+  background-color: #0088d0;
+  background-repeat: repeat-x;
+  border-radius: 3px;
+  border: 1px solid #007cbd; }
+
+.comments-area .bypostauthor cite span {
+  position: absolute;
+  margin-left: 5px;
+  margin-left: 0.357142857rem;
+  padding: 2px 5px;
+  padding: 0.142857143rem 0.357142857rem;
+  font-size: 10px;
+  font-size: 0.714285714rem; }
+
+.comments-area .bypostauthor cite b {
+  font-weight: bold; }
+
+a.comment-reply-link,
+a.comment-edit-link {
+  color: #686868;
+  font-size: 13px;
+  font-size: 0.928571429rem;
+  line-height: 1.846153846; }
+
+a.comment-reply-link:hover,
+a.comment-edit-link:hover {
+  color: #21759b; }
+
+.commentlist .pingback {
+  line-height: 1.714285714;
+  margin-bottom: 24px;
+  margin-bottom: 1.714285714rem; }
+
+/* Comment form */
+#respond {
+  margin-top: 48px;
+  margin-top: 3.428571429rem; }
+
+#respond h3#reply-title {
+  font-size: 16px;
+  font-size: 1.142857143rem;
+  line-height: 1.5; }
+
+#respond h3#reply-title #cancel-comment-reply-link {
+  margin-left: 10px;
+  margin-left: 0.714285714rem;
+  font-weight: normal;
+  font-size: 12px;
+  font-size: 0.857142857rem; }
+
+#respond form {
+  margin: 24px 0;
+  margin: 1.714285714rem 0; }
+
+#respond form p {
+  margin: 11px 0;
+  margin: 0.785714286rem 0; }
+
+#respond form p.logged-in-as {
+  margin-bottom: 24px;
+  margin-bottom: 1.714285714rem; }
+
+#respond form label {
+  display: block;
+  line-height: 1.714285714; }
+
+#respond form input[type="text"],
+#respond form textarea {
+  box-sizing: border-box;
+  font-size: 12px;
+  font-size: 0.857142857rem;
+  line-height: 1.714285714;
+  padding: 10px;
+  padding: 0.714285714rem;
+  width: 100%; }
+
+#respond form p.form-allowed-tags {
+  margin: 0;
+  font-size: 12px;
+  font-size: 0.857142857rem;
+  line-height: 2;
+  color: #5e5e5e; }
+
+.required {
+  color: red; }
+
 /* =Front page template
 -------------------------------------------------------------- */
 .entry-page-image {
@@ -1595,44 +1583,13 @@ article.format-quote .entry-content blockquote {
   display: block;
   text-align: right; }
 
-.category-heading {
-  overflow: hidden;
-  margin-bottom: 33px;
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: 700;
-  letter-spacing: 2px; }
-  .category-heading h1 {
-    margin: 0 0 6px; }
-  .category-heading .header-frame {
-    position: relative;
-    padding: 13px 48px;
-    max-width: 600px; }
-  .category-heading .heading-holder {
-    display: inline-block;
-    vertical-align: top;
-    position: relative; }
-    .category-heading .heading-holder:before {
-      content: "";
-      position: absolute;
-      top: 50%;
-      right: 100%;
-      width: 9999px;
-      height: 2px;
-      margin-top: 2px;
-      background: #525252;
-      text-align: left; }
-    .category-heading .heading-holder:after {
-      content: "";
-      position: absolute;
-      top: 50%;
-      left: 100%;
-      width: 9999px;
-      height: 2px;
-      margin-top: 2px;
-      background: #525252;
-      text-align: left; }
-
-.song-form {
-  width: 320px;
+#hugeit-contact-wrapper_8 {
+  background: transparent !important;
+  max-width: 600px;
   margin: 0 auto; }
+  #hugeit-contact-wrapper_8 h3 {
+    display: none !important; }
+
+div#hugeit-contact-wrapper_8 .buttons-block button.submit {
+  background-color: #622e54 !important;
+  border: 1px solid #622e54 !important; }
